--- a/web/package.json
+++ b/web/package.json
@@ -32,12 +32,18 @@
     "react-text-transition": "^1.3.0",
     "sass": "^1.32.12",
     "typescript": "^4.2.4",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "@types/react-cookies": "^0.1.0",
+    "@types/react-router-dom": "^5.1.7",
+    "autoprefixer": "^9.8.6",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   },
   "scripts": {
     "start": "craco --openssl-legacy-provider start",
     "reload": "BROWSER=none craco --openssl-legacy-provider  start",
-    "build": "craco --openssl-legacy-provider build",
+    "build": "printenv && craco --openssl-legacy-provider build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
@@ -58,13 +64,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-cookies": "^0.1.0",
-    "@types/react-router-dom": "^5.1.7",
-    "autoprefixer": "^9.8.6",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   }
 }
