--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: [self-hosted, media]
 
     steps:
+    - uses: actions/checkout@v3
     - name: Build and run the Docker image
       env:
         SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
