--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
             - SPOTIFY_CALLBACK_URL=http://media.local:3000/spotify/callback
             - SPOTIFY_CLIENT_ID
             - SPOTIFY_CLIENT_SECRET
+            - BASE_URL=/mixr/api
         build: ./api
         volumes:
             - ./api/Data:/app/Data
@@ -20,4 +21,5 @@ services:
         build: 
             context: ./web
             args:
-                - REACT_APP_API_URL=http://media.local:3001
+                - REACT_APP_API_URL=/mixr/api
+                - REACT_APP_BASE_URL=/mixr
