--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,6 +3,9 @@ FROM node:18.3.0 AS build-env
 ARG REACT_APP_API_URL
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
 
+ARG REACT_APP_BASE_URL
+ENV REACT_APP_BASE_URL=$REACT_APP_BASE_URL
+
 ENV NODE_ENV=production
 
 WORKDIR /app
