--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -5,6 +5,7 @@ ENV REACT_APP_API_URL=$REACT_APP_API_URL
 
 ARG REACT_APP_BASE_URL
 ENV REACT_APP_BASE_URL=$REACT_APP_BASE_URL
+ENV PUBLIC_URL=$REACT_APP_BASE_URL
 
 ENV NODE_ENV=production
 
