--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,5 +1,11 @@
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
 
+ARG SPOTIFY_CLIENT_ID
+ENV SPOTIFY_CLIENT_ID=$SPOTIFY_CLIENT_ID
+
+ARG SPOTIFY_CLIENT_SECRET
+ENV SPOTIFY_CLIENT_SECRET=$SPOTIFY_CLIENT_SECRET
+
 WORKDIR /app
 
 COPY *.csproj .
