--- a/.github/workflows/main-bpd.yml
+++ b/.github/workflows/main-bpd.yml
@@ -5,44 +5,92 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+env:
+  ARCH_LIST: linux/arm64/v8,linux/amd64
+  CURRENT_TAG: ${{ github.sha }}
+
 jobs:
-  create_env:
-    name: Create Env
-    runs-on: [self-hosted, builder]
-    outputs:
-      SPOTIFY_CLIENT_ID: ${{ steps.output.outputs.SPOTIFY_CLIENT_ID }}
-      SPOTIFY_CLIENT_SECRET: ${{ steps.output.outputs.SPOTIFY_CLIENT_SECRET }}
-    steps:
-      - id: output
-        run: |
-          {
-            "SPOTIFY_CLIENT_ID=${{ secrets.SPOTIFY_CLIENT_ID }}"
-            "SPOTIFY_CLIENT_SECRET=${{ secrets.SPOTIFY_CLIENT_SECRET }}"
-          } >> $GITHUB_OUTPUT
-      - run: echo "${{steps.output.outputs.SPOTIFY_CLIENT_ID}}" "${{steps.output.outputs.SPOTIFY_CLIENT_SECRET}}"
-      - run: echo '--build-arg SPOTIFY_CLIENT_ID=${{ steps.output.outputs.SPOTIFY_CLIENT_ID }} --build-arg SPOTIFY_CLIENT_ID=${{ steps.output.outputs.SPOTIFY_CLIENT_SECRET }}'
   build-api:
-    uses: TangerieOrg/Workflows/.github/workflows/docker-build-push.yml@main
-    needs: create_env
-    with:
-      image_name: mixr-api
-      registry_name: docker.tangerie.xyz
-      ref: main
-      path: api
-      force_build: 'true'
-      build_args: '--build-arg SPOTIFY_CLIENT_ID=${{ needs.create_env.outputs.SPOTIFY_CLIENT_ID }} --build-arg SPOTIFY_CLIENT_ID=${{ needs.create_env.outputs.SPOTIFY_CLIENT_SECRET }}'
-    secrets: inherit
+    runs-on: [self-hosted, builder]
+    steps:
+      - name: Pull repo
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+          clean: true
+          ref: main
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Login
+        uses: docker/login-action@v2
+        with:
+          registry: docker.tangerie.xyz
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Print data
+        run: echo Building to docker.tangerie.xyz/mixr-api ${{env.CURRENT_TAG}}
+
+      - name: Build and push image (docker.tangerie.xyz/mixr-api)
+        run: >
+          docker buildx build 
+          --push
+          --platform ${{env.ARCH_LIST}}
+          -t docker.tangerie.xyz/mixr-api:${{env.CURRENT_TAG}}
+          -t docker.tangerie.xyz/mixr-api:latest
+          --build-arg SPOTIFY_CLIENT_ID=${{secrets.SPOTIFY_CLIENT_ID}}
+          --build-arg SPOTIFY_CLIENT_SECRET=${{secrets.SPOTIFY_CLIENT_SECRET}}
+          api
 
   build-web:
-      uses: TangerieOrg/Workflows/.github/workflows/docker-build-push.yml@main
-      with:
-        image_name: mixr-web
-        registry_name: docker.tangerie.xyz
-        ref: main
-        path: web
-        force_build: 'true'
-        build_args: --build-arg REACT_APP_API_URL=/mixr/api --build-arg REACT_APP_BASE_URL=/mixr
-      secrets: inherit
+    runs-on: [self-hosted, builder]
+    steps:
+      - name: Pull repo
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+          clean: true
+          ref: main
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Login
+        uses: docker/login-action@v2
+        with:
+          registry: docker.tangerie.xyz
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Print data
+        run: echo Building to docker.tangerie.xyz/mixr-web ${{env.CURRENT_TAG}}
+
+      - name: Build and push image (docker.tangerie.xyz/mixr-web)
+        run: >
+          docker buildx build 
+          --push
+          --platform ${{env.ARCH_LIST}}
+          -t docker.tangerie.xyz/mixr-web:${{env.CURRENT_TAG}}
+          -t docker.tangerie.xyz/mixr-web:latest
+          --build-arg REACT_APP_API_URL=/mixr/api
+          --build-arg REACT_APP_BASE_URL=/mixr
+          web
 
   deploy:
     uses: TangerieOrg/Workflows/.github/workflows/docker-deploy.yml@main
